# wfc_2019f

./: .gitignore  LICENSE  MANIFEST.in  README.md  commands.xml  pyproject.toml  requirements.txt  samples.xml  samples_cats.xml  samples_chessdots.xml  samples_keen.xml  samples_lake.xml  samples_original.xml  samples_reference.xml  samples_reference_continue.xml  samples_reference_nohogs.xml  samples_test.xml  samples_test_ground.xml  samples_test_vis.xml  setup.cfg  setup.py  wfc_run.py
.github/workflows/: python-package.yml
doc/: conf.py  index.rst
doc/dot/: chain.dot  design.dot
images/samples/Castle/: data.xml
images/samples/Circles/: data.xml
images/samples/Circuit/: data.xml
images/samples/Knots/: data.xml
images/samples/Rooms/: data.xml
images/samples/Summer/: data.xml
logs/: logs.txt
tests/: test_wfc_adjacency.py  test_wfc_solver.py
wfc/: #shopping list.txt#  #wfc_adjacency.py#  #wfc_solver.py#  .#shopping list.txt  .#wfc_solver.py  dependency.gv  flycheck_wfc_visualize.py  wfc_adjacency.py  wfc_control.py  wfc_patterns.py  wfc_solver.py  wfc_tensor.py  wfc_tiles.py  wfc_visualize.py
wfc1/: wfc_adjacency.py  wfc_control.py  wfc_example.py  wfc_extra.py  wfc_minizinc.py  wfc_patterns.py  wfc_solver.py  wfc_solver_two.py  wfc_tiles.py  wfc_utilities.py
