[project]
name = "wfc_python"
version = "0.0.0"
description = "Implementation of wave function collapse in Python."
readme = "README.md"
requires-python = ">=3.5"
license = {file = "LICENSE"}
keywords = ["sample", "wfc", "wave function collapse"]
authors = [{name = "Isaac Karth", email = "isaac@isaackarth.com"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]

dependencies  = [
    "hilbertcurve",
    "imageio",
    "matplotlib",
    "numpy",
    "scipy"
]

[project.optional-dependencies]
tests = ["pytest"]
docs = ["sphinx"]

[project.urls]
homepage = "https://github.com/ikarth/wfc_python"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
